--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -3,9 +3,9 @@ ADD ./search_engine_crawler /app
 WORKDIR /app
 RUN pip install -r requirements.txt
 
-ENV MONGO mongo_db
+ENV MONGO mongo
 ENV MONGO_PORT 27017
-ENV RMQ_HOST rabbitmq
+ENV RMQ_HOST rabbit
 #ENV RMQ_QUEUE
 #ENV URL https://vitkhab.github.io/search_engine_test_site/
 ENV EXCLUDE_URLS *github.com
