--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
 
   search_engine_ui:
     image: vsb2007/search_engine_ui:latest
+    environment:
+      - MONGO=mongo
     ports:
       - 8000:8000/tcp
     restart: always
@@ -20,3 +22,10 @@ services:
     ports:
       - 8001:8000/tcp
     restart: always
+    depends_on: [rabbit]
+    command: https://vitkhab.github.io/search_engine_test_site/
+    environment:
+      - MONGO=mongo
+      - RMQ_HOST=rabbit
+      - CHECK_INTERVAL=3600
+      - EXCLUDE_URLS='.*github.com'
