--- a/gitlab_ci/search_engine_deploy/search_engine/values.yaml
+++ b/gitlab_ci/search_engine_deploy/search_engine/values.yaml
@@ -7,12 +7,13 @@ crawler:
   rabbitmqPassword: crawler
   args:
     - "https://vitkhab.github.io/search_engine_test_site/"
-
+ui:
+  image:
+    repository: vsb2007/search_engine_ui
 rabbitmq:
   rabbitmqUsername: crawler
   rabbitmqPassword: crawler
   rabbitmqNodePort: 5672
-
 mongodb:
   serviceType: ClusterIP
   persistence.enabled: enabled
